--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "main": "./src/server/server.ts",
   "scripts": {
-    "start": "yarn dev-server-node",
+    "start": "yarn dev-node",
     "dev-node": "concurrently -n server,client -c red,blue \"yarn dev-server-node\" \"yarn dev-client\"",
     "dev-bun": "concurrently -n server,client -c red,blue \"yarn dev-server-bun\" \"yarn dev-client\"",
     "dev-server-node": "yarn run -T tsx watch ./src/server/server.node.ts",
     "dev-server-bun": "npx bun --watch ./src/server/server.bun.ts",
-    "dev-client": "vite dev --host",
+    "dev-client": "vite --host",
     "test-ci": "echo 'No tests yet'",
     "test": "yarn run -T jest --passWithNoTests",
     "test-coverage": "lazy inherit",
@@ -23,6 +23,7 @@
     "@tldraw/sync": "^2.4.4",
     "@tldraw/sync-core": "^2.4.4",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "itty-router": "^5.0.17",
     "react": "^18.2.0",
