--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "main": "./src/server/server.ts",
   "scripts": {
     "start": "yarn dev-node",
-    "dev-node": "concurrently -n server,client -c red,blue \"yarn dev-server-node\" \"yarn dev-client\"",
-    "dev-bun": "concurrently -n server,client -c red,blue \"yarn dev-server-bun\" \"yarn dev-client\"",
-    "dev-server-node": "yarn run -T tsx watch ./src/server/server.node.ts",
-    "dev-server-bun": "npx bun --watch ./src/server/server.bun.ts",
+    "dev-node": "concurrently -n server,client -c red,blue \"npm run dev-server-node\" \"npm run dev-client\"",
+    "dev-server-node": "npx -T tsx watch ./src/server/server.node.ts",
     "dev-client": "vite --host",
     "test-ci": "echo 'No tests yet'",
     "test": "yarn run -T jest --passWithNoTests",
@@ -30,7 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
     "tldraw": "^2.4.4",
-    "tsx": "^4.19.0",
+    "tsx": "^4.19.1",
     "unfurl.js": "^6.4.0",
     "vite": "^5.3.3",
     "ws": "^8.16.0"
