--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/server/server.ts",
   "scripts": {
     "start": "npm run dev-node",
-    "dev-node": "concurrently -n server,client -c red,blue \"npm run dev-server-node\" \"npm run dev-client\"",
+    "dev-node": "npx concurrently -n server,client -c red,blue \"npm run dev-server-node\" \"npm run dev-client\"",
     "dev-server-node": "npx -T tsx watch ./src/server/server.node.ts",
     "dev-client": "vite --host",
     "test-ci": "echo 'No tests yet'",
