--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tsx": "^4.19.1",
     "unfurl.js": "^6.4.0",
     "vite": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
@@ -40,13 +41,11 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "lazyrepo": "0.0.0-alpha.27",
-    "typescript": "^5.3.3",
-    "vite": "^5.3.4"
+    "typescript": "^5.3.3"
   }
 }
