--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/static": "^7.0.4",
     "@fastify/websocket": "^10.0.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tldraw/sync": "^2.4.4",
     "@tldraw/sync-core": "^2.4.4",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "fs": "^0.0.1-security",
     "itty-router": "^5.0.17",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
@@ -31,7 +35,6 @@
     "tsx": "^4.19.1",
     "unfurl.js": "^6.4.0",
     "vite": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
