--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "lint": "yarn run -T tsx ../../scripts/lint.ts"
   },
   "dependencies": {
+    "@codemirror/collab": "^6.1.1",
+    "@codemirror/commands": "^6.1.1",
+    "@codemirror/lang-python": "^6.1.3",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@fastify/cors": "^9.0.1",
     "@fastify/static": "^7.0.4",
     "@fastify/websocket": "^10.0.1",
@@ -27,6 +31,7 @@
     "fastify": "^4.28.1",
     "fs": "^0.0.1-security",
     "itty-router": "^5.0.17",
+    "katex": "^0.16.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
